--- a/source/pic18x/config_bit_editor/pic18x_config_bit_editor.dproj
+++ b/source/pic18x/config_bit_editor/pic18x_config_bit_editor.dproj
@@ -1,81 +1,150 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <PropertyGroup>
-    <ProjectGuid>{d2b1f3d8-d8a4-4b05-bc92-6af0a7c0fa19}</ProjectGuid>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-    <DCC_DependencyCheckOutputName>..\..\..\bin\pic18x_config_bit_editor.exe</DCC_DependencyCheckOutputName>
-    <MainSource>pic18x_config_bit_editor.dpr</MainSource>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <Version>7.0</Version>
-    <DCC_DebugInformation>False</DCC_DebugInformation>
-    <DCC_LocalDebugSymbols>False</DCC_LocalDebugSymbols>
-    <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
-    <DCC_Define>RELEASE</DCC_Define>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <Version>7.0</Version>
-    <DCC_Define>DEBUG</DCC_Define>
-    <DCC_IntegerOverflowCheck>True</DCC_IntegerOverflowCheck>
-    <DCC_RangeChecking>True</DCC_RangeChecking>
-    <DCC_ExeOutput>..\..\..\bin</DCC_ExeOutput>
-    <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
-    <DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
-    <DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
-    <DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_UnitSearchPath>
-    <DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_ResourcePath>
-    <DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_ObjPath>
-    <DCC_IncludePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_IncludePath>
-    <DCC_DebugInformation>False</DCC_DebugInformation>
-  </PropertyGroup>
-  <ProjectExtensions>
-    <Borland.Personality>Delphi.Personality</Borland.Personality>
-    <Borland.ProjectType />
-    <BorlandProject>
-<BorlandProject><Delphi.Personality><Parameters><Parameters Name="UseLauncher">False</Parameters><Parameters Name="LoadAllSymbols">True</Parameters><Parameters Name="LoadUnspecifiedSymbols">False</Parameters></Parameters><VersionInfo><VersionInfo Name="IncludeVerInfo">True</VersionInfo><VersionInfo Name="AutoIncBuild">False</VersionInfo><VersionInfo Name="MajorVer">1</VersionInfo><VersionInfo Name="MinorVer">0</VersionInfo><VersionInfo Name="Release">0</VersionInfo><VersionInfo Name="Build">0</VersionInfo><VersionInfo Name="Debug">False</VersionInfo><VersionInfo Name="PreRelease">False</VersionInfo><VersionInfo Name="Special">False</VersionInfo><VersionInfo Name="Private">False</VersionInfo><VersionInfo Name="DLL">False</VersionInfo><VersionInfo Name="Locale">1033</VersionInfo><VersionInfo Name="CodePage">1252</VersionInfo></VersionInfo><VersionInfoKeys><VersionInfoKeys Name="CompanyName"></VersionInfoKeys><VersionInfoKeys Name="FileDescription"></VersionInfoKeys><VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="InternalName"></VersionInfoKeys><VersionInfoKeys Name="LegalCopyright"></VersionInfoKeys><VersionInfoKeys Name="LegalTrademarks"></VersionInfoKeys><VersionInfoKeys Name="OriginalFilename"></VersionInfoKeys><VersionInfoKeys Name="ProductName"></VersionInfoKeys><VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys><VersionInfoKeys Name="Comments"></VersionInfoKeys></VersionInfoKeys><Source><Source Name="MainSource">pic18x_config_bit_editor.dpr</Source></Source></Delphi.Personality></BorlandProject></BorlandProject>
-  </ProjectExtensions>
-  <Import Project="$(MSBuildBinPath)\Borland.Delphi.Targets" />
-  <PropertyGroup>
-    <PreBuildEvent>copy /y res\*.* .</PreBuildEvent>
-    <PostBuildEvent>resourcehacker.exe -script resourcehacker_script.txt
-del pic18x_config_bit_editor.res</PostBuildEvent>
-  </PropertyGroup>
-  <ItemGroup>
-    <DelphiCompile Include="pic18x_config_bit_editor.dpr">
-      <MainSource>MainSource</MainSource>
-    </DelphiCompile>
-    <DCCReference Include="..\..\common\aboutbox_unit.pas">
-      <Form>AboutBoxForm</Form>
-    </DCCReference>
-    <DCCReference Include="..\..\cpc_core\cpc_access_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_blocks_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_common_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_constant_expression_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_core_objects_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_definitions_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_expressions_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_main_compiler_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_multi_precision_integer_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_simple_expression_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_source_analysis_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_statements_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_target_cpu_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_term_expression_unit.pas" />
-    <DCCReference Include="..\..\cpc_core\cpc_types_unit.pas" />
-    <DCCReference Include="..\common\pic18x_aboutbox_unit.pas">
-      <Form>PIC18xAboutBoxForm</Form>
-    </DCCReference>
-    <DCCReference Include="..\common\pic18x_selection_dialog_unit.pas">
-      <Form>Pic18xSelectionDialog</Form>
-    </DCCReference>
-    <DCCReference Include="config_bit_editor_aboutbox_unit.pas">
-      <Form>ConfigBitEditorAboutBoxForm</Form>
-    </DCCReference>
-    <DCCReference Include="dummy_pic18x_cpu_unit.pas" />
-    <DCCReference Include="main_form_unit.pas">
-      <Form>MainForm</Form>
-    </DCCReference>
-  </ItemGroup>
-</Project>
+	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+		<PropertyGroup>
+			<ProjectGuid>{d2b1f3d8-d8a4-4b05-bc92-6af0a7c0fa19}</ProjectGuid>
+			<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
+			<DCC_DependencyCheckOutputName>..\..\..\bin\pic18x_config_bit_editor.exe</DCC_DependencyCheckOutputName>
+			<MainSource>pic18x_config_bit_editor.dpr</MainSource>
+			<ProjectVersion>12.3</ProjectVersion>
+			<Base>True</Base>
+			<Config Condition="'$(Config)'==''">Debug</Config>
+			<Platform>Win32</Platform>
+			<AppType>Application</AppType>
+			<FrameworkType>VCL</FrameworkType>
+		</PropertyGroup>
+		<PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
+			<Base>true</Base>
+		</PropertyGroup>
+		<PropertyGroup Condition="'$(Config)'=='Release' or '$(Cfg_1)'!=''">
+			<Cfg_1>true</Cfg_1>
+			<CfgParent>Base</CfgParent>
+			<Base>true</Base>
+		</PropertyGroup>
+		<PropertyGroup Condition="'$(Config)'=='Debug' or '$(Cfg_2)'!=''">
+			<Cfg_2>true</Cfg_2>
+			<CfgParent>Base</CfgParent>
+			<Base>true</Base>
+		</PropertyGroup>
+		<PropertyGroup Condition="'$(Base)'!=''">
+			<DCC_UnitAlias>WinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;DbiErrs=BDE;$(DCC_UnitAlias)</DCC_UnitAlias>
+		</PropertyGroup>
+		<PropertyGroup Condition="'$(Cfg_1)'!=''">
+			<Version>7.0</Version>
+			<DCC_DebugInformation>False</DCC_DebugInformation>
+			<DCC_LocalDebugSymbols>False</DCC_LocalDebugSymbols>
+			<DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
+			<DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
+		</PropertyGroup>
+		<PropertyGroup Condition="'$(Cfg_2)'!=''">
+			<Version>7.0</Version>
+			<DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
+			<DCC_IntegerOverflowCheck>True</DCC_IntegerOverflowCheck>
+			<DCC_RangeChecking>True</DCC_RangeChecking>
+			<DCC_ExeOutput>..\..\..\bin</DCC_ExeOutput>
+			<DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
+			<DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
+			<DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
+			<DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame;$(DCC_UnitSearchPath)</DCC_UnitSearchPath>
+			<DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame;$(DCC_ResourcePath)</DCC_ResourcePath>
+			<DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame;$(DCC_ObjPath)</DCC_ObjPath>
+			<DCC_IncludePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame;$(DCC_IncludePath)</DCC_IncludePath>
+			<DCC_DebugInformation>False</DCC_DebugInformation>
+		</PropertyGroup>
+		<ProjectExtensions>
+			<Borland.Personality>Delphi.Personality.12</Borland.Personality>
+			<Borland.ProjectType/>
+			<BorlandProject>
+				<Delphi.Personality>
+					<Parameters/>
+					<VersionInfo>
+						<VersionInfo Name="IncludeVerInfo">True</VersionInfo>
+						<VersionInfo Name="AutoIncBuild">False</VersionInfo>
+						<VersionInfo Name="MajorVer">1</VersionInfo>
+						<VersionInfo Name="MinorVer">0</VersionInfo>
+						<VersionInfo Name="Release">0</VersionInfo>
+						<VersionInfo Name="Build">0</VersionInfo>
+						<VersionInfo Name="Debug">False</VersionInfo>
+						<VersionInfo Name="PreRelease">False</VersionInfo>
+						<VersionInfo Name="Special">False</VersionInfo>
+						<VersionInfo Name="Private">False</VersionInfo>
+						<VersionInfo Name="DLL">False</VersionInfo>
+						<VersionInfo Name="Locale">1033</VersionInfo>
+						<VersionInfo Name="CodePage">1252</VersionInfo>
+					</VersionInfo>
+					<VersionInfoKeys>
+						<VersionInfoKeys Name="CompanyName"/>
+						<VersionInfoKeys Name="FileDescription"/>
+						<VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys>
+						<VersionInfoKeys Name="InternalName"/>
+						<VersionInfoKeys Name="LegalCopyright"/>
+						<VersionInfoKeys Name="LegalTrademarks"/>
+						<VersionInfoKeys Name="OriginalFilename"/>
+						<VersionInfoKeys Name="ProductName"/>
+						<VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys>
+						<VersionInfoKeys Name="Comments"/>
+					</VersionInfoKeys>
+					<Source>
+						<Source Name="MainSource">pic18x_config_bit_editor.dpr</Source>
+					</Source>
+				</Delphi.Personality>
+				<Platforms>
+					<Platform value="Win32">True</Platform>
+				</Platforms>
+			</BorlandProject>
+			<ProjectFileVersion>12</ProjectFileVersion>
+		</ProjectExtensions>
+		<ItemGroup>
+			<DelphiCompile Include="pic18x_config_bit_editor.dpr">
+				<MainSource>MainSource</MainSource>
+			</DelphiCompile>
+			<DCCReference Include="..\..\cpc_core\cpc_access_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_blocks_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_common_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_constant_expression_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_core_objects_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_definitions_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_expressions_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_main_compiler_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_multi_precision_integer_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_simple_expression_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_source_analysis_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_statements_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_target_cpu_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_term_expression_unit.pas"/>
+			<DCCReference Include="..\..\cpc_core\cpc_types_unit.pas"/>
+			<DCCReference Include="..\common\pic18x_selection_dialog_unit.pas">
+				<Form>Pic18xSelectionDialog</Form>
+			</DCCReference>
+			<DCCReference Include="..\..\common\aboutbox_unit.pas">
+				<Form>AboutBoxForm</Form>
+			</DCCReference>
+			<DCCReference Include="config_bit_editor_aboutbox_unit.pas">
+				<Form>ConfigBitEditorAboutBoxForm</Form>
+			</DCCReference>
+			<DCCReference Include="dummy_pic18x_cpu_unit.pas"/>
+			<DCCReference Include="main_form_unit.pas">
+				<Form>MainForm</Form>
+			</DCCReference>
+			<DCCReference Include="..\common\pic18x_aboutbox_unit.pas">
+				<Form>PIC18xAboutBoxForm</Form>
+			</DCCReference>
+			<BuildConfiguration Include="Debug">
+				<Key>Cfg_2</Key>
+				<CfgParent>Base</CfgParent>
+			</BuildConfiguration>
+			<BuildConfiguration Include="Base">
+				<Key>Base</Key>
+			</BuildConfiguration>
+			<BuildConfiguration Include="Release">
+				<Key>Cfg_1</Key>
+				<CfgParent>Base</CfgParent>
+			</BuildConfiguration>
+		</ItemGroup>
+		<Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
+		<Import Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')" Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj"/>
+		<PropertyGroup>
+			<PreBuildEvent><![CDATA[copy /y res\*.* .]]></PreBuildEvent>
+			<PostBuildEvent><![CDATA[resourcehacker.exe -script resourcehacker_script.txt
+del pic18x_config_bit_editor.res]]></PostBuildEvent>
+		</PropertyGroup>
+	</Project>
