--- a/source/pic18x/config_bit_editor/pic18x_config_bit_editor.dproj
+++ b/source/pic18x/config_bit_editor/pic18x_config_bit_editor.dproj
@@ -24,10 +24,10 @@
     <DCC_DcuOutput>.\$(Platform)\$(Config)</DCC_DcuOutput>
     <DCC_ObjOutput>.\$(Platform)\$(Config)</DCC_ObjOutput>
     <DCC_HppOutput>.\$(Platform)\$(Config)</DCC_HppOutput>
-    <DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_UnitSearchPath>
-    <DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_ResourcePath>
-    <DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_ObjPath>
-    <DCC_IncludePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;..\..\lib\about_credit_frame</DCC_IncludePath>
+    <DCC_UnitSearchPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;$(BDS)\lib\debug;$(BDS)\lib</DCC_UnitSearchPath>
+    <DCC_ResourcePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;$(BDS)\lib\debug;$(BDS)\lib</DCC_ResourcePath>
+    <DCC_ObjPath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;$(BDS)\lib\debug;$(BDS)\lib</DCC_ObjPath>
+    <DCC_IncludePath>..\..\lib;..\..\lib\fastmm;..\..\lib\mparith;..\..\lib\PerlRegEx;..\..\cpc_core;..\common;$(BDS)\lib\debug;$(BDS)\lib</DCC_IncludePath>
     <DCC_DebugInformation>False</DCC_DebugInformation>
   </PropertyGroup>
   <ProjectExtensions>
